# motion_planning_gazebo

URDF_FUSION_DESIGN_description/: CMakeLists.txt  package.xml
URDF_FUSION_DESIGN_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
URDF_FUSION_DESIGN_description/meshes/: Caster_Back_Left_1.stl  Caster_Back_Right_1.stl  Caster_Front_Left_1.stl  Caster_Front_Right_1.stl  Drive_Wheel_Left_1.stl  Drive_Wheel_Right_1.stl
URDF_FUSION_DESIGN_description/urdf/: URDF_FUSION_DESIGN.gazebo  URDF_FUSION_DESIGN.trans  URDF_FUSION_DESIGN.xacro  materials.xacro
Vaccume_description/: CMakeLists.txt  package.xml
Vaccume_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
Vaccume_description/meshes/: base_link.stl
Vaccume_description/urdf/: Vaccume.gazebo  Vaccume.trans  Vaccume.xacro  materials.xacro
moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit_config/config/: fake_controllers.yaml  gazebo_controllers.yaml  gazebo_shobot.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  shobot.srdf  simple_moveit_controllers.yaml  stomp_planning.yaml
moveit_config/launch/: arena.launch  arena_1.launch  arena_ptp.launch  demo.launch  gazebo.launch  move_group.launch  moveit.rviz  octomap_mapping.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  world.launch
moveit_config/msg/: blocks_poses.h  blocks_poses_publisher.cpp
moveit_config/scripts/: DynamicsNew.py  arm_control.cpp  chumma,py  collision_object.cpp  const_vel_test.cpp  coordinate_name.py  coordinates.py  depth_cam.cpp  detect.py  dynamic_planning.cpp  dynamic_planning.py  dynamic_replanning.py  end_effector_coordinates.txt  execute.py  execute_tr.py  execute_waypoints.py  fkin.py  gdcheck.py  gripper_cmd.py  gripper_off.py  ik_angles.py  joint_angles_24-6-2024.csv  joint_angles_apf_prm.csv  joint_angles_matrix.txt  joint_positions.py  joint_states.py  launch.py  minimal_joint_states_publisher.py  misc.cpp  move.py  move_arm.py  object_detection.py  object_pose.cpp  object_pose_collision.cpp  object_pose_collision.py  octomap.py  open_cv_control.cpp  path_plot.py  pick_n_place.cpp  pick_n_place_e.cpp  (+16 more)
moveit_config/worlds/: arena_2.world  arena_actor.sdf  arena_actor.world  arena_f.world  arena_person.world  arena_person_d.world  arena_u.world  person.sdf  person.world
shobot/: CMakeLists.txt  package.xml
shobot/config/: joint_names_shobot.yaml
shobot/industrial-warehouse/: industrial-warehouse.sdf  shobot_ware.launch  walk.world
shobot/launch/: display.launch  gazebo.launch  gz_warehouse.launch  new.launch  rviz.launch  shobot_gmapping.launch  shobot_remote.launch  shobot_slam.launch
shobot/meshes/: axle_bl.STL  axle_fl.STL  axle_fr.STL  base_link.STL  bogie_l.STL  bogie_r.STL  drive_wheel_l.STL  drive_wheel_r.STL  lidar.STL  wheel_bl.STL  wheel_br.STL  wheel_fl.STL  wheel_fr.STL
shobot/urdf/: m2wr.gazebo  m2wr.xacro  macros.xacro  shobot.urdf.xacro
urdF_description/: CMakeLists.txt  package.xml
urdF_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
urdF_description/meshes/: L_WHEEL_B_1.stl  L_WHEEL_F_1.stl  R_WHEEL_B_1.stl  R_WHEEL_F_1.stl  Top_Body_1.stl  base_link.stl
urdF_description/urdf/: materials.xacro  shobot.xacro  ur_gazebo.xacro  urdF.gazebo  urdF.trans
urdF_description/worlds/: arena.world
(+1 files in other folders)
